# Effective-RAG

./: .env.template  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  redis_service.py  run_test.sh  test.py  test2.py  test_services.py
backend/: .env.template  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260709185256_init/: migration.sql
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/auth/dto/: create-tokens.dto.ts
backend/src/auth/jwt/: current-user.decorator.ts  jwt-strategy.ts
backend/src/password/: password.module.ts  password.service.ts
backend/src/prisma/: prisma.module.ts  prisma.service.ts
backend/src/users/: users.module.ts  users.service.ts
backend/src/users/dto/: create-user.dto.ts  (+1 more)
core/: __init__.py  config.py  lifespan.py
docker/: .env.template  docker-compose.yml  setup-secrets.sh
docker/minio-policy/: documents-ai-reader-policy.json  documents-backend-policy.json  init-minio.sh
dto/: __init__.py
dto/app_context_dto/: app_context_dto.py
dto/extraction_dto/: extraction_dto.py  minio_extraction_dto.py
dto/format_extraction_dto/: format_extraction_dto.py
dto/server_config_dto/: server_config_dto.py
effective_rag/: __init__.py  chunknizer.py  detection.py  effective_rag.py  llm_openai.py  preprocess.py  storage_data.py
models/: __init__.py  ocr_extraction.py
processing/: pdf.py
prompts/: __init__.py  format_prompt.py  init_prompt.py
routes/: __init__.py  extraction.py  search.py
services/: __init__.py  app_logger.py  bucket_minio.py  connection_manager.py  docling_service.py  format_service.py  llm_service.py  ocr_service.py  qdrant_service.py  search_service.py
training/dataset/: convert_dataset.py
training/notebooks/: Data-Analysis.ipynb
training/outputs/yolo12n_2026-06-24_00-16-46/: args.yaml  results.csv
training/results_train/best_2026-06-28_14-24-58/: args.yaml  results.csv
(+2 files in other folders)
