[project]
name = "effective-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi[standard]>=0.135.3",
    "minio>=7.2.20",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers",
    "websockets>=16.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
