[project]
name = "effective-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "doclayout-yolo>=0.0.4",
    "docling>=2.86.0",
    "glmocr[selfhosted]>=0.1.5",
    "jupyter>=1.1.1",
    "minio>=7.2.20",
    "openai>=2.31.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.12.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.0",
    "supervision>=0.29.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers",
    "ultralytics>=8.4.75",
    "websockets>=16.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
